--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,21 @@ async-timeout==4.0.3
 bleak==0.19.5
 dbus-fast==1.95.2
 nest-asyncio==1.5.4
+cycler==0.11.0
+docutils==0.18.1
+fonttools==4.28.4
+kiwisolver==1.3.2
+matplotlib==3.5.1
+mpmath==1.2.1
+numpy==1.21.4
+packaging==21.3
+pandas==1.3.5
+Pillow==8.4.0
+pygame==2.1.0
+pyparsing==3.0.6
+python-dateutil==2.8.2
+pytz==2021.3
+scikit-kinematics==0.8.7
+scipy==1.7.3
+six==1.16.0
+sympy==1.9
